수정과 삭제

--- a/src/main/resources/templates/item/list.html
+++ b/src/main/resources/templates/item/list.html
@@ -21,7 +21,6 @@
         <div class="col">
             <th:block th:if="${not #lists.isEmpty(pageResponseDTO.dtoList)}">
 
-
                 <table class="table  table-striped table-hover">
                     <thead>
                     <tr>
@@ -95,6 +94,11 @@
                 </nav>
             </div>
         </div>
+
+        <form class="delform">
+
+        </form>
+
     </th:block>
 
     <script th:inline="javascript">
@@ -103,7 +107,13 @@
                 location.href = "/admin/item/update?id=" + $(this).val();
             })
             $(".delMoveBtn").on("click", function (){
-                location.href = "/admin/item/update?id=" + $(this).val();
+                let formtag = document.createElement("form")
+                formtag.action = "/admin/item/del";
+                formtag.method = "post";
+                formtag.innerHTML = "<input name='id' value= '" +this.value+ "'>"
+                $(".delform").append(formtag);
+
+                formtag.submit();
             })
         })
 
