--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout1}"
->
+      layout:decorate="~{layouts/layout1}">
 <head>
     <meta charset="UTF-8">
     <title>아이템 등록</title>
 </head>
 <body>
 <th:block layout:fragment="content">
-
     <form action="/admin/item/new" method="post" th:object="${itemDTO}" enctype="multipart/form-data">
-
         <div class="row">
             <div class="col-8 offset-2">
                 <div class="row">
@@ -20,7 +17,6 @@
                             <label for="itemNm" class="form-label">상품명</label>
                             <input type="text" class="form-control" th:field="*{itemNm}"  required id="itemNm" >
                             <p th:if="${#fields.hasErrors('itemNm')}" th:errors="*{itemNm}" class="fieldError"></p>
-
                         </div>
                     </div>
                     <div class="col-12">
@@ -28,7 +24,6 @@
                             <label for="price" class="form-label">가격</label>
                             <input type="number" min="0" class="form-control" th:field="*{price}" id="price">
                             <p th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="fieldError"></p>
-
                         </div>
                     </div>
                     <div class="col-12">
@@ -36,7 +31,6 @@
                             <label for="stockNumber"  class="form-label">재고 수량</label>
                             <input type="number" min="0" class="form-control" th:field="*{stockNumber}" id="stockNumber">
                             <p th:if="${#fields.hasErrors('stockNumber')}" th:errors="*{stockNumber}" class="fieldError"></p>
-
                         </div>
                     </div>
                     <div class="col-12">
@@ -44,7 +38,6 @@
                             <label for="itemDetail" class="form-label">상세설명 </label>
                             <textarea class="form-control" th:field="*{itemDetail}" id="itemDetail" rows="3"></textarea>
                             <p th:if="${#fields.hasErrors('itemDetail')}" th:errors="*{itemDetail}" class="fieldError"></p>
-
                         </div>
                     </div>
                     <div class="col-12">
@@ -58,49 +51,36 @@
                     </div>
                     <!--이미지 미리보기-->
                     <div class="col-12">
-                        <div class="row  main imgpreview">
-
-                        </div>
-                        <div class="row row-cols-md-3 imgpreviewinput imgpreview">
-
-
-                        </div>
-
-
-
+                        <div class="row  main imgpreview"></div>
+                        <div class="row row-cols-md-3 imgpreviewinput imgpreview"></div>
                         <div class="mb-3 imgA">
                             <label for="formFile" class="form-label">대표이미지</label>
                             <input class="form-control imgInput mainimg"  id="formFile" accept="image/*" name="multipartFile" type="file" >
-
                             <label for="formFilede" class="form-label">상세 이미지</label>
                             <input class="form-control imgInput "  id="formFilede" accept="image/*" name="multipartFile" type="file" >
-
-
                         </div>
                     </div>
-
                     <div class="col-12">
-                       <button type="submit" class="btn btn-dark">저장</button>
-                       <button type="button">목록</button>
+                       <button class="btn btn-dark">저장</button>
+                       <button type="button" class="btn btn-dark listbtn">목록</button>
+                        <script>
+                            $(".listbtn").on("click", function (){
+                                location.href = "/admin/item/list";
+                            })
+                        </script>
                     </div>
                 </div>
-
             </div>
         </div>
     </form>
-
-
 </th:block>
-
 <th:block layout:fragment="script">
-
    <script th:inline="javascript">
        $(document).ready(function () {
            let msg = [[${msg}]]
            if(msg!=null){
                alert(msg)
            }
-
 
            $("form").on("submit", function (e) {
                console.log("폼 제출 시 실행됨");
@@ -116,9 +96,6 @@
 
                    return false
                }
-
-
-
            })
            function itemNmValid() {
                let itemNmVal = $("#itemNm").val()
@@ -128,7 +105,6 @@
                    return true
                }
            }
-
            // $(".addimg").on("click", function () {
            //     let str = '<input class="form-control imgInput" accept="image/*" name="multipartFile" type="file" >'
            //     $(".imgA").append(str)
@@ -137,10 +113,7 @@
            // })
 
            $(".imgpreview").on("click", "button", function () {
-
                $(this).parent().remove()
-
-
            })
 
            bindDomEvent()
@@ -170,15 +143,9 @@
                        console.log("이건 대표이미지 인풋입니다.")
                        readURL(this);
                        $(".mainimg").val()
-
                    }else {
                        readURL1(this);
-
-
                    }
-
-
-
                })
            }
            function readURL(input) {
@@ -210,11 +177,8 @@
                        $(".main").find('div:eq(0)').append(inputtag)
                        $(".main").find('input').hide()
                        $(".imgInput").val("")
-
                    };
                    reader.readAsDataURL(input.files[0]);
-
-
                }
            }
            function readURL1(input) {
@@ -241,24 +205,12 @@
                        $(".imgpreviewinput").find('input:eq(0)').hide()
 
                        $(".imgInput").val("")
-
                    };
                    reader.readAsDataURL(input.files[0]);
-
                }
-
            }
-
-
-
-
-
-
        })
-
    </script>
-
 </th:block>
-
 </body>
 </html>
