--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -94,6 +94,14 @@
 
                                                     },
                                                     error : function (result, status, error) {
+                                                        console.log(result)
+
+                                                        console.log(result.status)
+
+                                                        if (result.status == '401') {
+                                                            alert("로그인 후 이용해주세요");
+                                                            location.href = "/members/login"
+                                                        }
                                                     }
                                                 })
                                             }
