--- a/src/main/resources/templates/order/orderHist.html
+++ b/src/main/resources/templates/order/orderHist.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout1}">
+      layout:decorate="~{layouts/layout1}"
+>
 <head>
     <meta charset="UTF-8">
     <title>구매이력</title>
@@ -9,7 +10,8 @@
 <body>
 <th:block layout:fragment="content">
     <h2 class="mb-4">구매이력</h2>
-    <!--구매이력 반복출력-->
+
+    <!--구매이력 반복 출력-->
     <th:block th:if="${#lists.isEmpty(orders.getContent())}">
 
         <h1>구매이력이 없습니다.</h1>
@@ -18,11 +20,11 @@
     <th:block th:unless="${#lists.isEmpty(orders.getContent())}">
 
         <th:block th:each="orderHistDTO: ${orders.getContent()}">
-
-            <h4 th:text="${orderHistDTO.orderDate} + ' 주문'"></h4>
+            <h4 th:text="${#temporals.format(orderHistDTO.orderDate, 'yyyy-MM-dd HH:mm')} + ' 주문'"></h4>
             <div class="ms-3">
+
                 <th:block th:if="${orderHistDTO.orderStatus.name() == 'ORDER'}">
-                    <button>주문 취소</button>
+                    <button type="button" th:value="${orderHistDTO.orderId}" class="cancelbtn"> 주문취소</button>
                 </th:block>
                 <th:block th:unless="${orderHistDTO.orderStatus.name() == 'ORDER'}">
                     <h4>(취소 완료)</h4>
@@ -30,41 +32,91 @@
 
                 <div class="card">
                     <div class="row">
+
                         <th:block th:each="orderItemDTO: ${orderHistDTO.orderItemDTOList}">
                             <div class="col">
-                                <img style="width: 100px; height: 100px" th:src="${orderItemDTO.imgUrl}" th:alt="${orderItemDTO.itemNm}">
+                                <img  style="width: 100px;height: 100px" th:src="${orderItemDTO.imgUrl}" th:alt="${orderItemDTO.itemNm}">
                             </div>
+
                             <div class="col">
-                                <strong><span th:text="${orderItemDTO.itemNm}"></span></strong>
-                                <span th:text="${orderItemDTO.orderPrice}+'원'"></span>
-                                <span th:text="${orderItemDTO.count}+'개'"></span>
+                                <strong><span th:text="${orderItemDTO.itemNm}" ></span></strong>
+                                <span th:text="${orderItemDTO.orderPrice} + '원'"></span>
+                                <span th:text="${orderItemDTO.count} + '개'"></span>
                             </div>
+
                         </th:block>
+
                     </div>
                 </div>
             </div>
+
         </th:block>
-        <th:block th:with="start=${ (orders.number/maxPage)*maxPage+1},
-        end=(${(orders.totalPages == 0 )? 1 : (start + (maxPage -1 ) < orders.totalPages ? start + (maxPage -1 ) : orders.totalPages)})">
+
+        <th:block th:with="start=${ (orders.number/maxPage)*maxPage+1}, end=(${(orders.totalPages == 0 )? 1 : (start + (maxPage -1 ) < orders.totalPages ? start + (maxPage -1 ) : orders.totalPages)})">
+
             <nav aria-label="Page navigation example">
                 <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
+
+                    <li class="page-item" th:classappend="${orders.number eq 0} ? 'disabled' : ''">
+                        <a class="page-link" th:href="@{'/orders/' + ${orders.number -1}}" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
+                    <th:block th:each="page: ${#numbers.sequence(start, end)}">
+                        <li class="page-item" th:classappend="${orders.number eq page -1} ? 'active' : ''">
+                            <a class="page-link" th:href="@{'/orders/' + ${page -1}}" th:text="${page}">1</a>
+                        </li>
+                    </th:block>
+
+                    <li class="page-item" th:classappend="${orders.number+1 ge orders.totalPages} ? 'disabled':''">
+                        <a class="page-link" th:href="@{'/orders/' + ${orders.number +1}}" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
                 </ul>
             </nav>
+
         </th:block>
+
     </th:block>
+
+    <script th:inline="javascript">
+        $(document).ready(function (){
+            $(".cancelbtn").on("click", function (){
+                // 버튼을 클릭했을 때 이벤트 발생
+                // 발생하는 이벤트는 함수호출
+                let orderId = $(this).val()
+                cancelOrder(orderId)
+            })
+        })
+
+        function cancelOrder(orderId){  // 부모의 pk가 입력되고
+            let url = "/order/" + orderId + "/cancel";
+            let paramDate = {
+                orderId : orderId       // 입력된 pk의 키값은 orderId이며 value는 pk값이다.
+            }
+            // console.log(paramDate)
+            $.ajax({
+                url : url,
+                type : "post",
+                data : paramDate,
+                dataType : "json",      // 돌려받을 타입 결과타입
+                success : function (result){
+                    alert("주문이 취소 되었습니다.")
+                    location.href = '/orders/' + [[${page}]];
+                },
+                error : function (result, status, error){
+                    if (result.status == '401'){
+                        alert("로그인 후 사용해주세요")
+                    }else {
+                        alert(result.responseText)
+                    }
+                }
+            })
+        }
+    </script>
+
 </th:block>
+
 </body>
 </html>
