--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -64,48 +64,9 @@
 
                                 <th:block th:if="${itemDTO.itemSellStatus.name() == 'SELL'}">
                                     <div class="col-12 text-center">
-                                        <button class="btn  btn-danger">장바구니</button><!--장바구니 이벤트 , -->
+                                        <button type="button" th:value="${itemDTO.id}" class="btn  btn-danger cartBtn">장바구니</button><!--장바구니 이벤트 , -->
                                         <button type="button" class="btn  btn-danger" onclick="order()">주문하기</button><!--주문 이벤트-->
-                                        <script>
 
-                                            function order() {
-
-                                                let url = "/order";
-                                                let paramDate = {
-                                                    itemId : $("#itemid").val() ,
-                                                    count : $("#count").val()
-                                                }
-
-                                                // let param = JSON.stringify(paramDate)
-
-                                                console.log(paramDate)
-                                                // console.log(param)
-
-                                                $.ajax({
-                                                    url : url,
-                                                    type : "post",
-                                                    // contentType : "application/json; charset=utf-8",
-                                                    // data : param,
-                                                    data : paramDate ,
-                                                    success : function (result) {
-                                                        console.log(result)
-                                                        alert(result)
-                                                        location.href = "/";
-
-                                                    },
-                                                    error : function (result, status, error) {
-                                                        console.log(result)
-
-                                                        console.log(result.status)
-
-                                                        if (result.status == '401') {
-                                                            alert("로그인 후 이용해주세요");
-                                                            location.href = "/members/login"
-                                                        }
-                                                    }
-                                                })
-                                            }
-                                        </script>
                                     </div>
                                 </th:block>
                                 <th:block th:if="${itemDTO.itemSellStatus.name() == 'SOLD_OUT'}">
@@ -154,6 +115,80 @@
             </div>
         </div>
     </form>
+    <script th:inline="javascript">
+
+        $(document).ready(function (){
+            $(".cartBtn").on("click", function (){
+                let itemid = $(this).val()
+                let count = $("#count").val()
+                addcart(itemid, count);  // 장바구니에 담기
+            })
+        })
+
+        function addcart(itemid, count){
+            console.log("addCart()로 들어온 값 : " + itemid)
+            console.log("addCart()로 들어온 값 : " + count)
+
+            $.ajax({
+                url: "/cart",
+                type: "post",
+                data: {itemid : itemid, count: count},
+
+                success : function (result){
+                    alert("상품을 장바구니에 담았습니다.")
+                    console.log(result)
+                },
+                error : function (result, status, error){
+                    console.log(result)
+                    if (result.status == '401'){
+
+                        alert("로그인 후 이용해주세요")
+                        location.href = "/members/login";
+                    }else {
+                        alert(result.responseText);
+                    }
+                }
+            })
+        }
+
+        function order() {
+
+            let url = "/order";
+            let paramDate = {
+                itemId : $("#itemid").val() ,
+                count : $("#count").val()
+            }
+
+            // let param = JSON.stringify(paramDate)
+
+            console.log(paramDate)
+            // console.log(param)
+
+            $.ajax({
+                url : url,
+                type : "post",
+                // contentType : "application/json; charset=utf-8",
+                // data : param,
+                data : paramDate ,
+                success : function (result) {
+                    console.log(result)
+                    alert(result)
+                    location.href = "/";
+
+                },
+                error : function (result, status, error) {
+                    console.log(result)
+
+                    console.log(result.status)
+
+                    if (result.status == '401') {
+                        alert("로그인 후 이용해주세요");
+                        location.href = "/members/login"
+                    }
+                }
+            })
+        }
+    </script>
 </th:block>
 </body>
 </html>
