--- a/src/main/resources/templates/order/orderHist.html
+++ b/src/main/resources/templates/order/orderHist.html
@@ -20,100 +20,139 @@
     <th:block th:unless="${#lists.isEmpty(orders.getContent())}">
 
         <th:block th:each="orderHistDTO: ${orders.getContent()}">
+
             <h4 th:text="${#temporals.format(orderHistDTO.orderDate, 'yyyy-MM-dd HH:mm')} + ' 주문'"></h4>
-            <div class="ms-3">
+            <div class="ms-3 mt-3">
 
-                <th:block th:if="${orderHistDTO.orderStatus.name() == 'ORDER'}">
-                    <button type="button" th:value="${orderHistDTO.orderId}" class="cancelbtn"> 주문취소</button>
-                </th:block>
-                <th:block th:unless="${orderHistDTO.orderStatus.name() == 'ORDER'}">
-                    <h4>(취소 완료)</h4>
-                </th:block>
+                <div class="row">
 
-                <div class="card">
-                    <div class="row">
+                    <div class="col shadow mb-4 p-3 ">
+                        <th:block  th:if="${orderHistDTO.orderStatus.name() == 'ORDER'}">
+                            <div class=" row">
+                                <div class="col text-end">
+                                    <button  type="button" th:value="${orderHistDTO.orderId}" class="btn btn-info cancelbtn mb-3"> 주문취소</button>
 
-                        <th:block th:each="orderItemDTO: ${orderHistDTO.orderItemDTOList}">
-                            <div class="col">
-                                <img  style="width: 100px;height: 100px" th:src="${orderItemDTO.imgUrl}" th:alt="${orderItemDTO.itemNm}">
+                                </div>
                             </div>
+                        </th:block>
+                        <th:block th:unless="${orderHistDTO.orderStatus.name() == 'ORDER'}">
+                            <h4>(취소 완료)</h4>
+                        </th:block>
 
-                            <div class="col">
-                                <strong><span th:text="${orderItemDTO.itemNm}" ></span></strong>
-                                <span th:text="${orderItemDTO.orderPrice} + '원'"></span>
-                                <span th:text="${orderItemDTO.count} + '개'"></span>
+                        <th:block th:each="orderItemDTO : ${orderHistDTO.orderItemDTOList}">
+                            <div class="card">
+                                <div class="row align-items-center" >
+
+                                    <div class="col-4" >
+                                        <img  style="width: 100px;height: 100px" th:src="${orderItemDTO.imgUrl}" th:alt="${orderItemDTO.itemNm}">
+                                    </div>
+
+                                    <div class="col-8">
+                                        <strong><span th:text="${orderItemDTO.itemNm}" ></span></strong>
+                                        <span th:text="${orderItemDTO.orderPrice} + '원'"></span>
+                                        <span th:text="${orderItemDTO.count} + '개'"></span>
+
+
+                                    </div>
+
+
+                                </div>
+
                             </div>
-
                         </th:block>
 
                     </div>
                 </div>
+
+
+
+
+
             </div>
+
 
         </th:block>
 
-        <th:block th:with="start=${ (orders.number/maxPage)*maxPage+1}, end=(${(orders.totalPages == 0 )? 1 : (start + (maxPage -1 ) < orders.totalPages ? start + (maxPage -1 ) : orders.totalPages)})">
+        <th:block th:with="start=${ (orders.number/maxPage)*maxPage+1}, end=(${(orders.totalPages == 0 ) ?  1 : (start + (maxPage -1 ) < orders.totalPages ? start + (maxPage -1 ) : orders.totalPages)})">
 
             <nav aria-label="Page navigation example">
                 <ul class="pagination">
 
-                    <li class="page-item" th:classappend="${orders.number eq 0} ? 'disabled' : ''">
-                        <a class="page-link" th:href="@{'/orders/' + ${orders.number -1}}" aria-label="Previous">
+                    <li class="page-item"   th:classappend="${orders.number eq 0} ? 'disabled'  : '' ">
+                        <a   class="page-link" th:href="@{'/orders/' + ${orders.number -1}}"  aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
+
                     <th:block th:each="page: ${#numbers.sequence(start, end)}">
-                        <li class="page-item" th:classappend="${orders.number eq page -1} ? 'active' : ''">
-                            <a class="page-link" th:href="@{'/orders/' + ${page -1}}" th:text="${page}">1</a>
+
+                        <li class="page-item" th:classappend="${orders.number eq page -1} ? 'active' : '' ">
+                            <a   class="page-link" th:href="@{'/orders/' + ${page -1}}" th:text="${page}">1</a>
                         </li>
+
                     </th:block>
 
-                    <li class="page-item" th:classappend="${orders.number+1 ge orders.totalPages} ? 'disabled':''">
-                        <a class="page-link" th:href="@{'/orders/' + ${orders.number +1}}" aria-label="Next">
+
+
+
+                    <li class="page-item" th:classappend="${orders.number+1 ge orders.totalPages} ? 'disabled':'' ">
+                        <a   class="page-link" th:href="@{'/orders/' + ${orders.number +1}}" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
                 </ul>
             </nav>
 
+
         </th:block>
 
     </th:block>
-
+    
     <script th:inline="javascript">
-        $(document).ready(function (){
-            $(".cancelbtn").on("click", function (){
-                // 버튼을 클릭했을 때 이벤트 발생
-                // 발생하는 이벤트는 함수호출
+        $(document).ready(function () {
+            $(".cancelbtn").on("click", function () {
+                //버튼을 클릭했을대 이벤트 발생
+                //발생하는 이벤트는 함수호출
                 let orderId = $(this).val()
                 cancelOrder(orderId)
             })
         })
 
-        function cancelOrder(orderId){  // 부모의 pk가 입력되고
-            let url = "/order/" + orderId + "/cancel";
-            let paramDate = {
-                orderId : orderId       // 입력된 pk의 키값은 orderId이며 value는 pk값이다.
+        function cancelOrder(orderId) {     //부모의 pk가 입력되고
+            let url =  "/order/" + orderId + "/cancel";
+            let paramDate ={
+                orderId : orderId       //입력된 pk의 키값은 orderId 이며 value는 pk값이다.
             }
+            // "orderId" : '33'
+
             // console.log(paramDate)
             $.ajax({
+
                 url : url,
                 type : "post",
                 data : paramDate,
-                dataType : "json",      // 돌려받을 타입 결과타입
-                success : function (result){
+                dataType : "json",      //돌려받을 타입 결과타입 
+                success : function (result) {
                     alert("주문이 취소 되었습니다.")
-                    location.href = '/orders/' + [[${page}]];
+                    location.href  ='/orders/'+ [[${page}]]
                 },
-                error : function (result, status, error){
-                    if (result.status == '401'){
-                        alert("로그인 후 사용해주세요")
+                error : function (result, status, error) {
+                    if(result.status == '401'){
+                        alert("로그인 후 사용해 주세요 ")
                     }else {
                         alert(result.responseText)
                     }
                 }
+
+
+
             })
+
+
         }
+
+        
+        
     </script>
 
 </th:block>
